--- a/src/app/crud/crud.component.html
+++ b/src/app/crud/crud.component.html
@@ -39,6 +39,10 @@
     <h2>Add New Employee</h2>
     <label for="employeeName">Name:</label>
     <input type="text" id="employeeName" [(ngModel)]="dataname" name="employeeName" required>
+
+    <label for="employeeAddress">Name:</label>
+    <input type="text" id="employeeAddress" [(ngModel)]="dataaddress" name="employeeAddress" required>
+
     <button type="submit">Add Employee</button>
 </form>
 </div>
