--- a/src/app/crud/crud.component.html
+++ b/src/app/crud/crud.component.html
@@ -23,7 +23,7 @@
             <td>
                 <ng-container *ngIf="!resdata.editing; else editingMode">
                     <button (click)="upadteAction(resdata)" class="btn btn-primary">Edit</button>
-                </ng-container>
+                </ng-container >
                 <ng-template #editingMode>
                     <button (click)="saveAction(resdata)" class="btn btn-success">Save</button>
                     <button (click)="cancelAction(resdata)" class="btn btn-warning">Cancel</button>
@@ -38,11 +38,11 @@
 <form (ngSubmit)="addAction()" autocomplete="off">
     <h2>Add New Employee</h2>
     <label for="employeeName">Name:</label>
-    <input type="text" id="employeeName" [(ngModel)]="dataname" name="employeeName" required>
-
-    <label for="employeeAddress">Name:</label>
-    <input type="text" id="employeeAddress" [(ngModel)]="dataaddress" name="employeeAddress" required>
-
-    <button type="submit">Add Employee</button>
+    <input type="text" id="employeeName" style="width: 25%;" [(ngModel)]="dataname" name="employeeName" required>
+    <br>
+    <label for="employeeScore">Score:</label>
+    <input type="number" id="employeeScore"  style="width: 25%;" [(ngModel)]="dataascore" name="employeeScore" required>
+    <br>
+    <button type="submit" class="btn btn-primary">Add Employee</button>
 </form>
 </div>
